# Swallow

./: .replit  HELPFUL_STUFF.md  README.md  main.py  publish.sh  pyproject.toml  requirements.txt  start.py  start.sh  swallow.py
.github/workflows/: main.yml
package/swallow/: pyproject.toml
package/swallow.egg-info/: PKG-INFO
package/swallow/swallow/: __init__.py
package/swallow/tests/: test_swallow.py
python/: config.py  user.py
python/db_management/:  categorys.py
static/: style.css
swallow.egg-info/: SOURCES.txt  requires.txt
templates/: index.html  login.html
templates/jinja2/: base.html  base_loggedin.html  marcos.html
