[tool.poetry]
name = "Swallow"
version = "0.1.0"
description = "An api for d"
authors = ["Isaiah Day <@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-bootstrap = "^3.3.7"
flask-session = "^0.3.2"
replit = "^2.0.0"
sentry-sdk = "^1.0.0"
flask-wtf = "^0.14.3"
wtforms = "^2.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
